--- a/PL/Task/ChooseWorker.xaml
+++ b/PL/Task/ChooseWorker.xaml
@@ -1,40 +1,38 @@
-﻿<Window x:Class="PL.Task.TasksForWorkerList"
+﻿<Window x:Class="PL.Task.ChooseWorker"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Task"
         mc:Ignorable="d"
-        Title="TasksForWorkerList" Height="450" Width="800"         
-        DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+        Title="ChooseWorker" Height="450" Width="800" DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
-
         <Grid.RowDefinitions>
             <RowDefinition Height="40*"/>
             <RowDefinition Height="500*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+        <!--Internal, Upper Grid-->
         <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Image Source="\Images\Backround-blurred.jpg" Grid.ColumnSpan="2" Width="1000" Height="4000" />
+            <!--Lebel select-->
+            <Label Content="Chose the worker for the task:" FontFamily="Arial Black" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"  Grid.Column="0">
+            </Label>
+            <!--filter-->
+
+
 
         </Grid>
-        <Image Source="\Images\Backround-blurred.jpg" Grid.ColumnSpan="2" Width="1000" Height="4000" />
-
-        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}" MouseLeftButtonUp="Chose_Task_mouse"   >
-            <ListView.Background>
-                <ImageBrush ImageSource="\Images\Backround-blurred.jpg" ></ImageBrush>
-            </ListView.Background>
+        <ListView Grid.Row="1"  ItemsSource="{Binding Path=WorkerList}"   MouseDoubleClick="ListView_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="Chose the Task" Background="{x:Null}" FontFamily="Arial Black" BorderBrush="Black" BorderThickness="1.5"  HorizontalAlignment="Left" Margin="384,342,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="116" Click="Chose_Click"/>
 
     </Grid>
 </Window>
