--- a/PL/Worker/WorkerListWindow.xaml
+++ b/PL/Worker/WorkerListWindow.xaml
@@ -5,23 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Worker"
         mc:Ignorable="d"
-               Icon="\Images\IsraelFlag.jpg" 
 
         Title="WorkerListWindow" Height="640" Width="800"
+        Icon="\Images\IsraelFlag.jpg" 
+
       DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
     <!--External Grid-->
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="500*"/>
+            <RowDefinition Height="22*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="578*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <!--Internal, Upper Grid-->
-        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
+        <Grid Height="auto" Grid.Row="0" Width="auto" Grid.RowSpan="2">
+            <Grid.Background>
+                <ImageBrush />
+            </Grid.Background>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+
+
             <!--Lebel select-->
             <Label Content="Chose the filter you want to perform:" FontFamily="Arial Black" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"  Grid.Column="0">
             </Label>
@@ -35,15 +42,17 @@
 
 
         </Grid>
-        <ListView Grid.Row="1"  ItemsSource="{Binding Path=WorkerList}"  MouseLeftButtonUp="Mouse_click_delete" MouseDoubleClick="ListView_MouseDoubleClick">
+
+        <ListView Grid.Row="1"  ItemsSource="{Binding Path=WorkerList, Mode=OneWay}"  MouseLeftButtonUp="Mouse_click_delete" MouseDoubleClick="ListView_MouseDoubleClick" Margin="0,24,0,0" Grid.RowSpan="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
+
         </ListView>
-        <Button Content="Add" Grid.Row="1" HorizontalAlignment="Left" Height="50" Width="100" Click="Button_AddClick" Margin="300,513,0,15"/>
-        <Button Content="Delete" Visibility="{Binding OneClickForDelete, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverterKey } }" Grid.Row="1" HorizontalAlignment="Left" Height="50" Width="100" Click="Button_DeleteClick" Margin="451,513,0,15"/>
+        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Left" Height="50" Width="100" Click="Button_AddClick" Margin="300,513,0,15"/>
+        <Button Content="Delete" Visibility="{Binding OneClickForDelete, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverterKey } }" Grid.Row="2" HorizontalAlignment="Left" Height="50" Width="100" Click="Button_DeleteClick" Margin="451,513,0,15"/>
 
     </Grid>
 
