I fixed the Gantt window and it finally works. I fixed bugs that were in the TaskWindow window. I fixed binding problems in the TaskList window and all kinds of bugs that were in the adminWindow window. And I fixed the clock in the window of the mainWindow so that it will be updated with every change that is made in the window of adminWindow

--- a/PL/Task/TaskListWindow.xaml
+++ b/PL/Task/TaskListWindow.xaml
@@ -28,7 +28,7 @@
                       SelectionChanged="ComboBoxLevelTask_SelectionChanged" />
             <ComboBox SelectedValue="{Binding Path=filter, Mode=TwoWay}" ItemsSource="{Binding Source={StaticResource FilterTaskKey}}" Grid.Column="1"  Margin="55,0,225,0" Width="120" SelectionChanged="TaskList_FilterChanged"/>
             <TextBox Margin="200,5,10,4" Grid.Column="1"   Visibility="{Binding ByPossibleTaskforWorker,Mode=OneWay, Converter={StaticResource  BoolToVisibilityConverterKey}}"  KeyDown="TextBoxIdWorkerFilter_KeyDown" />
-            <TextBox Text="{Binding ContentSearch,Mode=OneWay }"  TextChanged="ContentSearch_Changed" HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120"  />
+            <TextBox  TextChanged="ContentSearch_Changed" HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120"  />
 
             <ComboBox Grid.Column="1"  Margin="229,5,67,5" Visibility="{Binding ByStatus ,Mode=OneWay, Converter={StaticResource  BoolToVisibilityConverterKey}}" 
        ItemsSource="{Binding Source={StaticResource TaskStatusKey }}"   
