--- a/PL/Task/ChoseDependency.xaml
+++ b/PL/Task/ChoseDependency.xaml
@@ -24,13 +24,19 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            <Image Source="\Images\Backround-blurred.jpg"  Width="1000" Height="4000" Grid.ColumnSpan="2" Grid.RowSpan="2" Grid.Row="1" />
+
         </Grid>
         <ListView ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick" Grid.ColumnSpan="2" Margin="0,28,0,0" Grid.RowSpan="2"  >
+            <ListView.Background>
+                <ImageBrush ImageSource="\Images\Backround-blurred.jpg" ></ImageBrush>
+            </ListView.Background>
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
+
         </ListView>
 
     </Grid>
