--- a/PL/Admin/GanttChart.xaml
+++ b/PL/Admin/GanttChart.xaml
@@ -8,10 +8,13 @@
         Title="GanttChart" Height="800" Width="900" 
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
         >
-    <!--<Window.Background>
-        <ImageBrush ImageSource="/Images/gantt.jpg"/>
-    </Window.Background>-->
+   
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="400*"/>
+            <RowDefinition Height="100*"/>
+        </Grid.RowDefinitions>
+        <Image Source="\Images\gantt.jpg" Grid.Row="1"  HorizontalAlignment="Right" />
         <DataGrid Initialized="dataGridSched_Initialized"   AutoGenerateColumns="True">
             <DataGrid.Resources>
                 <Style TargetType="DataGridCell">
@@ -20,7 +23,6 @@
                 </Style>
 
             </DataGrid.Resources>
-            <!--<ImageBrush ImageSource="/Images/gantt.jpg"/>-->
         </DataGrid>
     </Grid>
 
